--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ng build --output-path angularaapp --aot --prod"
+  },
+  "engines": {
+    "node": "v16.15.0",
+    "npm": "8.5.5"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cli": "~14.0.2",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
     "@angular/core": "^14.0.0",
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
@@ -20,9 +27,12 @@
     "@angular/router": "^14.0.0",
     "@zxing/ngx-scanner": "^3.6.2",
     "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
     "ngx-spinner": "^14.0.0",
+    "path": "^0.12.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.7.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
